Update the preprocessing of the data
Now all sorted according to the length of the german sentences

--- a/Evan Playground.ipynb
+++ b/Evan Playground.ipynb
@@ -170,6 +170,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['idx2word', 'train', 'dev'])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "english.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pad>\n",
+      "<unk>\n",
+      "<sos>\n",
+      "<eos>\n",
+      "david\n",
+      "gallo\n",
+      ":\n",
+      "this\n",
+      "is\n",
+      "bill\n",
+      "lange\n",
+      ".\n",
+      "i\n",
+      "'m\n",
+      "dave\n",
+      "and\n",
+      "we\n",
+      "'re\n",
+      "going\n",
+      "to\n",
+      "tell\n",
+      "you\n",
+      "some\n",
+      "stories\n",
+      "from\n",
+      "the\n",
+      "sea\n",
+      "here\n",
+      "in\n",
+      "video\n",
+      "'ve\n",
+      "got\n",
+      "of\n",
+      "most\n",
+      "incredible\n",
+      "titanic\n",
+      "that\n",
+      "'s\n",
+      "ever\n",
+      "been\n",
+      "seen\n",
+      ",\n",
+      "not\n",
+      "show\n",
+      "any\n",
+      "it\n",
+      "truth\n",
+      "matter\n",
+      "--\n",
+      "even\n",
+      "though\n",
+      "breaking\n",
+      "all\n",
+      "sorts\n",
+      "box\n",
+      "office\n",
+      "records\n",
+      "exciting\n",
+      "story\n",
+      "problem\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(60):\n",
+    "    print(english['idx2word'][i])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
