--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,14 +369,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "en_inputs.sort(key=len)\n",
-    "de_inputs.sort(key=len)\n",
-    "en_val.sort(key=len)\n",
-    "de_val.sort(key=len)"
+    "inplengths = [len(x) for x in de_inputs]\n",
+    "vallengths = [len(x) for x in de_val]\n",
+    "\n",
+    "sorted_indices_inp = np.argsort(inplengths)\n",
+    "sorted_indices_val = np.argsort(vallengths)\n",
+    "\n",
+    "de_inputs_sorted = []\n",
+    "en_inputs_sorted = []\n",
+    "de_val_sorted = []\n",
+    "en_val_sorted = []\n",
+    "\n",
+    "for s in sorted_indices_inp:\n",
+    "    de_inputs_sorted.append(de_inputs[s])\n",
+    "    en_inputs_sorted.append(en_inputs[s])\n",
+    "\n",
+    "for s in sorted_indices_val:\n",
+    "    de_val_sorted.append(de_val[s])\n",
+    "    en_val_sorted.append(en_val[s])\n",
+    "\n",
+    "de_inputs = de_inputs_sorted\n",
+    "en_inputs = en_inputs_sorted\n",
+    "de_val = de_val_sorted\n",
+    "en_val = en_val_sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 865, 3]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "de_inputs[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check to see if the sorted data is correct.\n",
+    "\n",
+    "\n",
+    "**en_inputs[112862] and de_inputs[112862] should give:**\n",
+    "\n",
+    "- <sos> i need your surname . symmetrical objects generally -- spell it for me . <eos> \n",
+    "    \n",
+    "- <sos> ich brauche ihren nachnamen . symmetrische objekte haben grundsätzlich – bitte buchstabieren sie ihn für mich . <eos> \n",
+    "    \n",
+    "**en_val[3021] and de_val[3021] should give:**\n",
+    "\n",
+    "- <sos> but where would be the nearest aed to help this patient ? <eos> \n",
+    "    \n",
+    "- <sos> aber wo wäre der nächste aed , um diesem patienten zu helfen ? <eos>     \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<sos> i need your surname . symmetrical objects generally -- spell it for me . <eos> \n",
+      "<sos> ich brauche ihren nachnamen . symmetrische objekte haben grundsätzlich – bitte buchstabieren sie ihn für mich . <eos> \n",
+      "<sos> but where would be the nearest aed to help this patient ? <eos> \n",
+      "<sos> aber wo wäre der nächste aed , um diesem patienten zu helfen ? <eos> "
+     ]
+    }
+   ],
+   "source": [
+    "en_idx_to_word = dict((v,k) for k,v in en_vocab.items())\n",
+    "de_idx_to_word = dict((v,k) for k,v in de_vocab.items())\n",
+    "\n",
+    "for i in en_inputs[112862]:\n",
+    "    print(en_idx_to_word[i], end=' ')\n",
+    "\n",
+    "print(\"\")\n",
+    "\n",
+    "for j in de_inputs[112862]:\n",
+    "    print(de_idx_to_word[j], end=' ')\n",
+    "    \n",
+    "print(\"\")\n",
+    "    \n",
+    "for i in en_val[3021]:\n",
+    "    print(en_idx_to_word[i], end=' ')\n",
+    "\n",
+    "print(\"\")\n",
+    "\n",
+    "for j in de_val[3021]:\n",
+    "    print(de_idx_to_word[j], end=' ')\n",
+    "    "
    ]
   },
   {
@@ -438,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +551,7 @@
    ],
    "source": [
     "en_inputs = en_inputs[:50000]\n",
-    "de_inputs = en_inputs[:50000]\n",
+    "de_inputs = de_inputs[:50000]\n",
     "print(len(en_inputs))"
    ]
   },
@@ -464,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,10 +583,10 @@
     "en_iwslt['dev'] = en_val\n",
     "de_iwslt['dev'] = de_val\n",
     "\n",
-    "with open('data/processed/english_no_pad_sorted_50k.pickle', 'wb') as handle:\n",
+    "with open('data/processed/english_no_pad_sorted.pickle', 'wb') as handle:\n",
     "    pickle.dump(en_iwslt, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    \n",
-    "with open('data/processed/german_no_pad_sorted_50k.pickle', 'wb') as handle:\n",
+    "with open('data/processed/german_no_pad_sorted.pickle', 'wb') as handle:\n",
     "    pickle.dump(de_iwslt, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
@@ -499,18 +599,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 10408, 11, 3]\n",
+      "[2, 266, 11, 3]\n",
       "58496\n",
       "129350\n",
       "84\n",
-      "<sos> ja . <eos> \n",
+      "<sos> danke . <eos> \n",
       "\n"
      ]
     }
@@ -536,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -553,10 +653,10 @@
     }
    ],
    "source": [
-    "with open('data/processed/english_no_pad_sorted_50k.pickle', 'rb') as handle:\n",
+    "with open('data/processed/english_no_pad_sorted.pickle', 'rb') as handle:\n",
     "    english = pickle.load(handle)\n",
     "    \n",
-    "with open('data/processed/german_no_pad_sorted_50k.pickle', 'rb') as handle:\n",
+    "with open('data/processed/german_no_pad_sorted.pickle', 'rb') as handle:\n",
     "    german = pickle.load(handle)\n",
     "    \n",
     "print(en_iwslt == english)\n",
@@ -565,20 +665,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n"
+      "[2, 865, 3]\n"
      ]
     }
    ],
    "source": [
-    "print(german['train'][-1])"
+    "print(german['train'][0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 865, 3]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "de_inputs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
