--- a/Evan Playground.ipynb
+++ b/Evan Playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,6 @@
     "\n",
     "# from torchtext.datasets import TranslationDataset, Multi30k\n",
     "# from torchtext.data import Field, BucketIterator\n",
-    "\n",
     "# import spacy\n",
     "\n",
     "import pickle\n",
@@ -27,31 +26,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/data/english_no_pad_sorted_50k.pickle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-645c30dfb074>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'/data/'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'english_no_pad_sorted_50k.pickle'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mhandle\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0menglish\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/data/english_no_pad_sorted_50k.pickle'"
+     ]
+    }
+   ],
    "source": [
-    "# dir = 'C:/Users/evan_/OneDrive/Documents/School/Graduate/Year 1/Spring/CS 690D/Project/data/processed/'\n",
-    "dir = 'C:/Users/evan_/Documents/School/Graduate/Year 1/Spring/CS 690D/Project/Base Model/data/processed/'\n",
+    "path = '/data/'\n",
     "\n",
-    "\n",
-    "with open(dir + 'english_no_pad_sorted_50k.pickle', 'rb') as handle:\n",
+    "with open(path + 'english_no_pad_sorted_50k.pickle', 'rb') as handle:\n",
     "    english = pickle.load(handle)\n",
     "    \n",
-    "with open(dir + 'german_no_pad_sorted_50k.pickle', 'rb') as handle:\n",
+    "with open(path + 'german_no_pad_sorted_50k.pickle', 'rb') as handle:\n",
     "    german = pickle.load(handle)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_length_en = len(english['train'][-1])\n",
-    "max_length_de = len(german['train'][-1])\n",
-    "\n",
-    "batch_size = max((max_length_en, max_length_de))"
    ]
   },
   {
@@ -289,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
