--- a/Evan Playground.ipynb
+++ b/Evan Playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,24 +25,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/data/english_no_pad_sorted_50k.pickle'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-645c30dfb074>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'/data/'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'english_no_pad_sorted_50k.pickle'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mhandle\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0menglish\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/data/english_no_pad_sorted_50k.pickle'"
-     ]
-    }
-   ],
    "source": [
-    "path = '/data/'\n",
+    "### Import the pre-processed data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = 'data/'\n",
     "\n",
     "with open(path + 'english_no_pad_sorted_50k.pickle', 'rb') as handle:\n",
     "    english = pickle.load(handle)\n",
@@ -55,79 +50,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Method 1 for batching, I don't think it is correct"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_batches(data, b_sz):\n",
-    "    batches = [[]]\n",
-    "    \n",
-    "    for sent in data:\n",
-    "        cur_len = 0\n",
-    "        for b in batches[-1]:\n",
-    "            cur_len += len(b)\n",
-    "            \n",
-    "        # if the sentence + current length is not greater than the batch size, then add it to the batch\n",
-    "        # otherwise fill the current batch\n",
-    "        if (cur_len + len(sent)) <= b_sz: \n",
-    "            batches[-1].append(sent)\n",
-    "        else:\n",
-    "            dif = b_sz - cur_len\n",
-    "            if dif > 0:\n",
-    "                pad_list = [0] * dif\n",
-    "                batches[-1].append(pad_list)\n",
-    "            batches.append([])        \n",
-    "            batches[-1].append(sent)\n",
-    "    \n",
-    "    # Don't forget about the last batch! make sure it is of the proper length too\n",
-    "    cur_len = 0\n",
-    "    for b in batches[-1]:\n",
-    "        cur_len += len(b)\n",
-    "    if cur_len < b_sz:\n",
-    "        dif = b_sz - cur_len\n",
-    "        pad_list = [0] * dif\n",
-    "        batches[-1].append(pad_list)\n",
-    "        \n",
-    "    return batches\n",
+    "### Token-Based Batching Method\n",
     "\n",
-    "batches = get_batches(english['train'], batch_size)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Method 2 for batching, I think this method is correct"
+    "Feed in the data from the preprocessed set, it should be sorted from shortest sentence to longest sentence without any padding on the sentences. The *get_batches* function will be used to create all of the batches for training, the output is a number of batches of varying dimensions, which is based on the batch size. Below is an example.\n",
+    "\n",
+    "#### Example, batch-size=14\n",
+    "- Given the first few sentences from the dataset (sorted):\n",
+    "    - [2, 84, 3]      (length 3)\n",
+    "    - [2, 102, 3]     (length 3)\n",
+    "    - [2, 63, 3]      (length 3)\n",
+    "    - [2, 84, 21, 3]  (length 4)\n",
+    "    - [2, 91, 123, 3] (length 4)\n",
+    "    \n",
+    "- We will fill up the batches based on the number of tokens in each sentence. So for example, the first batch (batch_size=14) will look like:\n",
+    "```\n",
+    "    [[2, 84, 3],\n",
+    "     [2, 102, 3],     \n",
+    "     [2, 63, 3],      \n",
+    "     [2, 84, 21, 3]]\n",
+    "```\n",
+    "- We will then zero-pad all of the sentences in batch that are less than maximum length of the longest sentence in the batch to be the same length as the longest sentence:\n",
+    "\n",
+    "```\n",
+    "    [[2, 84, 3, 0],\n",
+    "     [2, 102, 3, 0],     \n",
+    "     [2, 63, 3, 0],      \n",
+    "     [2, 84, 21, 3]]\n",
+    "```\n",
+    "\n",
+    "- Now we have a batch of dimension: $N x D$, where:\n",
+    "    - $N$ is the number of sentences in the batch, and \n",
+    "    - $D$ is the dimensionality (number of words) within a sentence.\n",
+    "    - It is important to note that the $N$ and $D$ values will vary from batch to batch, but **MUST** be consistent within each batch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_batches(data, b_sz):\n",
+    "\"\"\"\n",
+    "# THE FOLLOWING FUNCTION IS DEPRECATED\n",
+    "\n",
+    "def get_batches(german, english, b_sz):\n",
     "    batches = [[]]\n",
     "    \n",
-    "    for sent in data:\n",
+    "    # For every sentence in the dataset, add it to a batch, based on the batch size\n",
+    "    # if the sentence + current length is not greater than the batch size, \n",
+    "    # then add it to the batch otherwise fill the current batch\n",
+    "    for sent in german:\n",
     "        cur_len = 0\n",
     "        for b in batches[-1]:\n",
     "            cur_len += len(b)\n",
-    "            \n",
-    "        # if the sentence + current length is not greater than the batch size, then add it to the batch\n",
-    "        # otherwise fill the current batch\n",
+    "    \n",
     "        if (cur_len + len(sent)) <= b_sz: \n",
     "            batches[-1].append(sent)\n",
     "        else:\n",
     "            batches.append([])        \n",
     "            batches[-1].append(sent)\n",
     "    \n",
-    "    \n",
+    "    # For every batch within the entire set of batches, add padding to the sentences\n",
+    "    # that are less than the length of the longest sentence within the each batch.\n",
     "    for b in batches:\n",
     "        max_len = len(max(b, key=len))\n",
     "        \n",
@@ -137,32 +121,123 @@
     "                pad_list = 0 * dif\n",
     "                sent.append(pad_list)\n",
     "        \n",
-    "        \n",
     "    return batches\n",
     "\n",
-    "batches = get_batches(english['train'], 100)"
+    "\n",
+    "\n",
+    "batches = get_batches(german['train'], b_sz=20)\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2, 11, 3, 0], [2, 15, 3, 0], [2, 11, 3, 0], [2, 11, 3, 0], [2, 11, 3, 0], [2, 533, 11, 3], [2, 2344, 11, 3], [2, 2860, 11, 3], [2, 2937, 308, 3], [2, 2344, 11, 3], [2, 101, 191, 3], [2, 4864, 11, 3], [2, 4912, 308, 3], [2, 3144, 11, 3], [2, 7348, 11, 3], [2, 8069, 11, 3], [2, 3144, 11, 3], [2, 2860, 11, 3], [2, 2860, 11, 3], [2, 2770, 11, 3], [2, 2860, 11, 3], [2, 2344, 11, 3], [2, 170, 191, 3], [2, 286, 308, 3], [2, 10074, 11, 3], [2, 10075, 11, 3]]\n",
-      "[[2, 10074, 11, 3], [2, 10075, 11, 3], [2, 289, 11, 3], [2, 924, 11, 3], [2, 2770, 11, 3], [2, 544, 11, 3], [2, 1247, 11, 3], [2, 2897, 191, 3], [2, 1201, 11, 3], [2, 2438, 11, 3], [2, 2344, 11, 3], [2, 1201, 11, 3], [2, 13543, 11, 3], [2, 491, 11, 3], [2, 289, 191, 3], [2, 15351, 308, 3], [2, 101, 191, 3], [2, 2255, 11, 3], [2, 3237, 11, 3], [2, 2344, 11, 3], [2, 2344, 11, 3], [2, 8664, 11, 3], [2, 155, 2587, 3], [2, 12506, 11, 3], [2, 2344, 11, 3]]\n",
-      "[[2, 14834, 11, 3], [2, 3144, 11, 3], [2, 694, 11, 3], [2, 3144, 11, 3], [2, 18571, 11, 3], [2, 155, 2587, 3], [2, 1187, 11, 3], [2, 2344, 11, 3], [2, 694, 191, 3], [2, 19365, 308, 3], [2, 19365, 308, 3], [2, 3237, 11, 3], [2, 19365, 308, 3], [2, 15496, 308, 3], [2, 15496, 308, 3], [2, 3144, 11, 3], [2, 2344, 11, 3], [2, 2344, 11, 3], [2, 2344, 11, 3], [2, 3283, 11, 3], [2, 4602, 11, 3], [2, 14834, 11, 3], [2, 3144, 11, 3], [2, 289, 191, 3], [2, 3144, 11, 3]]\n",
-      "[[2, 3144, 11, 3], [2, 3144, 11, 3], [2, 694, 11, 3], [2, 672, 191, 3], [2, 3144, 11, 3], [2, 3476, 11, 3], [2, 11294, 11, 3], [2, 3144, 11, 3], [2, 2344, 11, 3], [2, 123, 11, 3], [2, 1201, 11, 3], [2, 672, 191, 3], [2, 18571, 308, 3], [2, 694, 11, 3], [2, 2344, 11, 3], [2, 505, 11, 3], [2, 3237, 308, 3], [2, 694, 191, 3], [2, 2770, 11, 3], [2, 2770, 11, 3], [2, 289, 191, 3], [2, 3237, 191, 3], [2, 2860, 11, 3], [2, 505, 11, 3], [2, 2887, 11, 3]]\n",
-      "[[2, 2770, 11, 3], [2, 3237, 11, 3], [2, 99, 191, 3], [2, 99, 191, 3], [2, 25722, 11, 3], [2, 25723, 308, 3], [2, 6733, 11, 3], [2, 19745, 191, 3], [2, 2770, 11, 3], [2, 2344, 11, 3], [2, 1386, 11, 3], [2, 289, 191, 3], [2, 909, 11, 3], [2, 3237, 11, 3], [2, 24264, 11, 3], [2, 3237, 191, 3], [2, 694, 191, 3], [2, 2344, 11, 3], [2, 5627, 11, 3], [2, 25951, 11, 3], [2, 25369, 11, 3], [2, 25369, 11, 3], [2, 26132, 11, 3], [2, 3237, 191, 3], [2, 26367, 11, 3]]\n"
+      "load the source and target sentences of the 3rd sentence within the 102nd batch:\n",
+      "Source: [2, 865, 335, 3]\n",
+      "Target: [2, 733, 21, 11, 3]\n"
      ]
     }
    ],
    "source": [
-    "for i in range(5):\n",
-    "    print(batches[i])"
+    "def get_batches(german, english, b_sz):\n",
+    "    de_batches = [[]]\n",
+    "    \n",
+    "    # For every sentence in the dataset, add it to a batch, based on the batch size\n",
+    "    # if the sentence + current length is not greater than the batch size, \n",
+    "    # then add it to the batch otherwise fill the current batch\n",
+    "    for sent in german:\n",
+    "        cur_len = 0\n",
+    "        for b in de_batches[-1]:\n",
+    "            cur_len += len(b)\n",
+    "    \n",
+    "        if (cur_len + len(sent)) <= b_sz: \n",
+    "            de_batches[-1].append(sent)\n",
+    "        else:\n",
+    "            de_batches.append([])        \n",
+    "            de_batches[-1].append(sent)\n",
+    "    \n",
+    "    # For every batch within the entire set of batches, add padding to the sentences\n",
+    "    # that are less than the length of the longest sentence within the each batch.\n",
+    "    for b in de_batches:\n",
+    "        max_len = len(max(b, key=len))\n",
+    "        \n",
+    "        for sent in b:\n",
+    "            dif = max_len - len(sent)\n",
+    "            if dif > 0:\n",
+    "                pad_list = 0 * dif\n",
+    "                sent.append(pad_list)\n",
+    "    \n",
+    "    en_batches = []\n",
+    "    k=0\n",
+    "    for i in range(len(de_batches)):\n",
+    "        tmp_batch = [0]*len(de_batches[i])\n",
+    "        for j in range(len(de_batches[i])):\n",
+    "            tmp_batch[j] = english[k]\n",
+    "            k+=1\n",
+    "            \n",
+    "        en_batches.append(tmp_batch)\n",
+    "        \n",
+    "    batches = []\n",
+    "    for i in range(len(de_batches)):\n",
+    "        dict_batch = []\n",
+    "        for j in range(len(de_batches[i])):\n",
+    "            tmp_dict = {\"source\": de_batches[i][j],\n",
+    "                       \"target\": en_batches[i][j]}\n",
+    "            dict_batch.append(tmp_dict)\n",
+    "        batches.append(dict_batch)\n",
+    "        \n",
+    "    return batches\n",
+    "\n",
+    "test_batches = get_batches(german['train'], english['train'], b_sz=20)\n",
+    "\n",
+    "print(\"load the source and target sentences of the 3rd sentence within the 102nd batch:\")\n",
+    "print(\"Source:\", test_batches[102][3]['source'])\n",
+    "print(\"Target:\", test_batches[102][3]['target'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29891\n",
+      "29891\n",
+      "<sos> ich wünschte , ich könnte ihnen mein jemen zeigen . <eos> \n",
+      "<sos> i wish i could show you my yemen . <eos> \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(en_batches))\n",
+    "print(len(batches))\n",
+    "\n",
+    "def print_sentence(sent, language):\n",
+    "    if language == \"german\":\n",
+    "        for w in sent:\n",
+    "            print(german['idx2word'][w], end=' ')\n",
+    "    elif language == \"english\":\n",
+    "        for w in sent:\n",
+    "            print(english['idx2word'][w], end=' ')\n",
+    "    else:\n",
+    "        print(\"Language should be either 'german' or 'english'\")\n",
+    "        \n",
+    "    print(\"\")\n",
+    "\n",
+    "\n",
+    "print_sentence(batches[29890][0], language=\"german\")\n",
+    "print_sentence(en_batches[29890][0], language=\"english\")\n",
+    "\n",
+    "#     print(len(batches[i]), \",\", len(en_batches[i]))\n"
    ]
   },
   {
@@ -187,79 +262,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pad>\n",
-      "<unk>\n",
-      "<sos>\n",
-      "<eos>\n",
-      "david\n",
-      "gallo\n",
-      ":\n",
-      "this\n",
-      "is\n",
-      "bill\n",
-      "lange\n",
-      ".\n",
-      "i\n",
-      "'m\n",
-      "dave\n",
-      "and\n",
-      "we\n",
-      "'re\n",
-      "going\n",
-      "to\n",
-      "tell\n",
-      "you\n",
-      "some\n",
-      "stories\n",
-      "from\n",
-      "the\n",
-      "sea\n",
-      "here\n",
-      "in\n",
-      "video\n",
-      "'ve\n",
-      "got\n",
-      "of\n",
-      "most\n",
-      "incredible\n",
-      "titanic\n",
-      "that\n",
-      "'s\n",
-      "ever\n",
-      "been\n",
-      "seen\n",
-      ",\n",
-      "not\n",
-      "show\n",
-      "any\n",
-      "it\n",
-      "truth\n",
-      "matter\n",
-      "--\n",
-      "even\n",
-      "though\n",
-      "breaking\n",
-      "all\n",
-      "sorts\n",
-      "box\n",
-      "office\n",
-      "records\n",
-      "exciting\n",
-      "story\n",
-      "problem\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(60):\n",
-    "    print(english['idx2word'][i])"
+    "class Encoder(nn.Module):\n",
+    "    def __init__(self, params):\n",
+    "        super(Encoder, self).__init__()\n",
+    "        \n",
+    "    def forward(self, batch):\n",
+    "        pass\n",
+    "        "
    ]
   },
   {
@@ -267,7 +280,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def train(english, german, params, net):\n",
+    "    batches = get_batches()\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
@@ -286,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
