Update the get batches function so that it produces tensors

--- a/Evan Playground.ipynb
+++ b/Evan Playground.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device: cuda:0\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -12,16 +20,19 @@
     "import torch.nn.functional as F\n",
     "import numpy as np\n",
     "\n",
-    "# from torchtext.datasets import TranslationDataset, Multi30k\n",
-    "# from torchtext.data import Field, BucketIterator\n",
-    "# import spacy\n",
+    "from torchtext.datasets import TranslationDataset, Multi30k\n",
+    "from torchtext.data import Field, BucketIterator\n",
+    "import spacy\n",
     "\n",
     "import pickle\n",
     "import random\n",
     "import math\n",
     "import os\n",
     "import time\n",
-    "import nltk"
+    "import nltk\n",
+    "\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"Device:\", device)"
    ]
   },
   {
@@ -33,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +54,87 @@
     "    english = pickle.load(handle)\n",
     "    \n",
     "with open(path + 'german_no_pad_sorted_50k.pickle', 'rb') as handle:\n",
-    "    german = pickle.load(handle)"
+    "    german = pickle.load(handle)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spacy_de = spacy.load('de')\n",
+    "spacy_en = spacy.load('en')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tokenize_de(text):\n",
+    "    \"\"\"\n",
+    "    Tokenizes German text from a string into a list of strings (tokens) and reverses it\n",
+    "    \"\"\"\n",
+    "    return [tok.text for tok in spacy_de.tokenizer(text)][::-1]\n",
+    "\n",
+    "def tokenize_en(text):\n",
+    "    \"\"\"\n",
+    "    Tokenizes English text from a string into a list of strings (tokens)\n",
+    "    \"\"\"\n",
+    "    return [tok.text for tok in spacy_en.tokenizer(text)]\n",
+    "\n",
+    "SRC = Field(tokenize = tokenize_de, \n",
+    "            init_token = '<sos>', \n",
+    "            eos_token = '<eos>', \n",
+    "            lower = True)\n",
+    "\n",
+    "TRG = Field(tokenize = tokenize_en, \n",
+    "            init_token = '<sos>', \n",
+    "            eos_token = '<eos>', \n",
+    "            lower = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x,y,z = Multi30k.splits(exts=('.de', '.en'), fields=(SRC, TRG))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<torchtext.data.example.Example object at 0x00000266D0D69978>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.examples[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(german['train'])):\n",
+    "    german['train'][i] = torch.LongTensor(german['train'][i]).cuda()\n",
+    "    english['train'][i] = torch.LongTensor(english['train'][i]).cuda()\n",
+    "    \n",
+    "for i in range(len(german['dev'])):\n",
+    "    german['dev'][i] = torch.LongTensor(german['dev'][i]).cuda()\n",
+    "    english['dev'][i] = torch.LongTensor(english['dev'][i]).cuda()"
    ]
   },
   {
@@ -86,9 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n# THE FOLLOWING FUNCTION IS DEPRECATED\\n\\ndef get_batches(german, english, b_sz):\\n    batches = [[]]\\n    \\n    # For every sentence in the dataset, add it to a batch, based on the batch size\\n    # if the sentence + current length is not greater than the batch size, \\n    # then add it to the batch otherwise fill the current batch\\n    for sent in german:\\n        cur_len = 0\\n        for b in batches[-1]:\\n            cur_len += len(b)\\n    \\n        if (cur_len + len(sent)) <= b_sz: \\n            batches[-1].append(sent)\\n        else:\\n            batches.append([])        \\n            batches[-1].append(sent)\\n    \\n    # For every batch within the entire set of batches, add padding to the sentences\\n    # that are less than the length of the longest sentence within the each batch.\\n    for b in batches:\\n        max_len = len(max(b, key=len))\\n        \\n        for sent in b:\\n            dif = max_len - len(sent)\\n            if dif > 0:\\n                pad_list = 0 * dif\\n                sent.append(pad_list)\\n        \\n    return batches\\n\\n\\n\\nbatches = get_batches(german['train'], b_sz=20)\\n\""
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "# THE FOLLOWING FUNCTION IS DEPRECATED\n",
@@ -131,16 +233,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load the source and target sentences of the 3rd sentence within the 102nd batch:\n",
-      "Source: [2, 865, 335, 3]\n",
-      "Target: [2, 733, 21, 11, 3]\n"
+      "tensor([  2, 865,   3], device='cuda:0')\n",
+      "y tensor([0], device='cuda:0')\n",
+      "x tensor([  2, 865,   3,   0], device='cuda:0')\n",
+      "tensor([  2, 865,   3], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test(x):\n",
+    "    y = [0]\n",
+    "    y = torch.as_tensor(y).cuda()\n",
+    "    print('y', y)\n",
+    "    x = torch.cat((x, y), dim=0)\n",
+    "    print('x', x)\n",
+    "    \n",
+    "    \n",
+    "print(german['train'][0])\n",
+    "test(german['train'][0])\n",
+    "print(german['train'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 865, 3, 0]\n",
+      "[2, 865, 3, 0]\n",
+      "[2, 10408, 3, 0]\n",
+      "[2, 115146, 3, 0]\n",
+      "[2, 104464, 3, 0]\n",
+      "[2, 61543, 3, 0]\n",
+      "[2, 2858, 3, 0]\n",
+      "[2, 54951, 3, 0]\n",
+      "[2, 6944, 3, 0]\n",
+      "[2, 865, 3, 0]\n",
+      "[2, 865, 3, 0]\n",
+      "[2, 115146, 3, 0]\n",
+      "[2, 35921, 3, 0]\n",
+      "[2, 15689, 3, 0]\n",
+      "[2, 53131, 3, 0]\n",
+      "[2, 3481, 3, 0]\n",
+      "[2, 3211, 3, 0]\n",
+      "[2, 865, 3, 0]\n",
+      "[2, 3174, 3, 0]\n",
+      "[2, 865, 11, 3]\n",
+      "[2, 8403, 3180, 3]\n",
+      "[2, 83114, 11, 3]\n",
+      "[2, 865, 11, 3]\n",
+      "[2, 865, 11, 3]\n",
+      "[2, 865, 11, 3]\n",
+      "[2, 3550, 11, 3]\n",
+      "[2, 865, 11, 3]\n",
+      "[2, 2302, 11, 3]\n",
+      "[2, 865, 11, 3]\n"
      ]
     }
    ],
@@ -194,7 +352,88 @@
     "        \n",
     "    return batches\n",
     "\n",
-    "test_batches = get_batches(german['train'], english['train'], b_sz=20)\n",
+    "test_batches = get_batches(german['train'], english['train'], b_sz=100)\n",
+    "\n",
+    "for i in range(len(test_batches[0])):\n",
+    "    print(test_batches[0][i]['source'])\n",
+    "\n",
+    "# print(\"load the source and target sentences of the 3rd sentence within the 102nd batch:\")\n",
+    "# print(\"Source:\", test_batches[102][3]['source'])\n",
+    "# print(\"Target:\", test_batches[102][3]['target'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load the source and target sentences of the 3rd sentence within the 102nd batch:\n",
+      "Source: tensor([  2, 864, 576,  11,   3], device='cuda:0')\n",
+      "Target: tensor([   2, 3144,  131,  624,   11,    3], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_batches(german, english, b_sz):\n",
+    "    de_batches = [[]]\n",
+    "    \n",
+    "    # For every sentence in the dataset, add it to a batch, based on the batch size\n",
+    "    # if the sentence + current length is not greater than the batch size, \n",
+    "    # then add it to the batch otherwise fill the current batch\n",
+    "    for sent in german:\n",
+    "        cur_len = 0\n",
+    "        for b in de_batches[-1]:\n",
+    "            cur_len += len(b)\n",
+    "    \n",
+    "        if (cur_len + len(sent)) <= b_sz: \n",
+    "            de_batches[-1].append(sent)\n",
+    "        else:\n",
+    "            de_batches.append([])        \n",
+    "            de_batches[-1].append(sent)\n",
+    "    \n",
+    "    # For every batch within the entire set of batches, add padding to the sentences\n",
+    "    # that are less than the length of the longest sentence within the each batch.\n",
+    "    for b in de_batches:\n",
+    "        max_len = len(max(b, key=len))\n",
+    "        \n",
+    "        for sent in b:\n",
+    "            dif = max_len - len(sent)\n",
+    "            if dif > 0:\n",
+    "                pad_list = [0] * dif\n",
+    "                pad_list = torch.as_tensor(pad_list).cuda()\n",
+    "                sent.data = torch.cat((sent,pad_list), dim=0)\n",
+    "#                 sent.data = x.clone()\n",
+    "\n",
+    "    en_batches = []\n",
+    "    k=0\n",
+    "    for i in range(len(de_batches)):\n",
+    "        tmp_batch = [0]*len(de_batches[i])\n",
+    "        for j in range(len(de_batches[i])):\n",
+    "            tmp_batch[j] = english[k]\n",
+    "            k+=1\n",
+    "            \n",
+    "        en_batches.append(tmp_batch)\n",
+    "        \n",
+    "    batches = []\n",
+    "    for i in range(len(de_batches)):\n",
+    "        dict_batch = []\n",
+    "        for j in range(len(de_batches[i])):\n",
+    "            tmp_dict = {\"source\": de_batches[i][j],\n",
+    "                       \"target\": en_batches[i][j]}\n",
+    "            dict_batch.append(tmp_dict)\n",
+    "        batches.append(dict_batch)\n",
+    "        \n",
+    "    return batches\n",
+    "\n",
+    "test_batches = get_batches(german['train'], english['train'], b_sz=100)\n",
+    "\n",
+    "# print(\"\")\n",
+    "# for i in range(len(test_batches[0])):\n",
+    "#     print(test_batches[0][i]['source'])\n",
     "\n",
     "print(\"load the source and target sentences of the 3rd sentence within the 102nd batch:\")\n",
     "print(\"Source:\", test_batches[102][3]['source'])\n",
@@ -203,24 +442,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29891\n",
-      "29891\n",
-      "<sos> ich wünschte , ich könnte ihnen mein jemen zeigen . <eos> \n",
-      "<sos> i wish i could show you my yemen . <eos> \n"
+      "<sos> damit löschen sie zeit . <eos> \n",
+      "<sos> so , in doing so , you 're erasing time . <eos> \n",
+      "<sos> aaa : danke schön . <eos> \n",
+      "<sos> aaa : thank you . <eos> \n"
      ]
     }
    ],
    "source": [
-    "print(len(en_batches))\n",
-    "print(len(batches))\n",
-    "\n",
     "def print_sentence(sent, language):\n",
     "    if language == \"german\":\n",
     "        for w in sent:\n",
@@ -233,31 +469,10 @@
     "        \n",
     "    print(\"\")\n",
     "\n",
+    "print_sentence(test_batches[2984][0]['source'], language=\"german\")\n",
+    "print_sentence(test_batches[2984][0]['target'], language=\"english\")\n",
     "\n",
-    "print_sentence(batches[29890][0], language=\"german\")\n",
-    "print_sentence(en_batches[29890][0], language=\"english\")\n",
-    "\n",
-    "#     print(len(batches[i]), \",\", len(en_batches[i]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['idx2word', 'train', 'dev'])"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "english.keys()"
+    "del test_batches"
    ]
   },
   {
