--- a/Evan Playground.ipynb
+++ b/Evan Playground.ipynb
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -374,6 +374,17 @@
       "load the source and target sentences of the 3rd sentence within the 102nd batch:\n",
       "Source: tensor([  2, 864, 576,  11,   3], device='cuda:0')\n",
       "Target: tensor([   2, 3144,  131,  624,   11,    3], device='cuda:0')\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-228fc120f5d1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Target:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_batches\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m102\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'target'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_batches\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m102\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'shape'"
      ]
     }
    ],
@@ -431,10 +442,6 @@
     "\n",
     "test_batches = get_batches(german['train'], english['train'], b_sz=100)\n",
     "\n",
-    "# print(\"\")\n",
-    "# for i in range(len(test_batches[0])):\n",
-    "#     print(test_batches[0][i]['source'])\n",
-    "\n",
     "print(\"load the source and target sentences of the 3rd sentence within the 102nd batch:\")\n",
     "print(\"Source:\", test_batches[102][3]['source'])\n",
     "print(\"Target:\", test_batches[102][3]['target'])"
@@ -484,10 +491,64 @@
     "class Encoder(nn.Module):\n",
     "    def __init__(self, params):\n",
     "        super(Encoder, self).__init__()\n",
+    "        self.source_vocab_size = params['source_vocab_size']\n",
+    "        self.d_emb = params['d_emb']\n",
+    "        self.d_hid = params['d_hid']\n",
+    "        self.droprate = params['droprate']\n",
+    "        self.layers = params['layers']\n",
+    "        self.bidirectional = params['bidirectional']\n",
+    "          \n",
+    "        self.embeddings = nn.Embedding(self.source_vocab_size, self.d_emb)\n",
+    "        self.dropout = nn.Dropout(self.droprate)\n",
+    "        self.LSTM = nn.LSTM(self.d_emb, self.d_hid, num_layers=self.layers, dropout=self.droprate, bidirectional=self.bidirectional)\n",
     "        \n",
-    "    def forward(self, batch):\n",
-    "        pass\n",
-    "        "
+    "    def forward(self, source):\n",
+    "        embed = self.dropout(self.embeddings(source))\n",
+    "        outputs, (hidden, cell) = self.LSTM(embed)\n",
+    "        \n",
+    "        return hidden, cell        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Decoder(nn.Module):\n",
+    "    def __init__(self, params):\n",
+    "        super(Decoder, self).__init__()\n",
+    "        self.target_vocab_size = params['target_vocab_size']\n",
+    "        self.d_emb = params['d_emb']\n",
+    "        self.d_hid = params['d_hid']\n",
+    "        self.droprate = params['droprate']\n",
+    "        self.layers = params['layers']\n",
+    "        \n",
+    "        self.embeddings = nn.Embedding(self.source_vocab_size, self.d_emb)\n",
+    "        self.dropout = nn.Dropout(self.droprate)\n",
+    "        self.LSTM = nn.LSTM(d_emb, d_hid, n_layers=layers, dropout=self.droprate)\n",
+    "        self.out = nn.Linear(d_hid, target_vocab_size)\n",
+    "        \n",
+    "    def forward(self, inp, hidden, cell):\n",
+    "        inp = inp.unsqueeze(0)\n",
+    "        \n",
+    "        embed = self.dropout(self.embeddings(inp))\n",
+    "        \n",
+    "        output, (hidden, cell) = self.LSTM(embed, (hidden, cell))\n",
+    "        \n",
+    "        prediction = self.out(output.squeeze(0))\n",
+    "        \n",
+    "        return prediction, hidden, cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class seq2seq(nn.Module):\n",
+    "    def __init__(self, encoder, decoder)"
    ]
   },
   {
@@ -499,6 +560,19 @@
     "def train(english, german, params, net):\n",
     "    batches = get_batches()\n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def batchify():\n",
+    "    \n",
+    "    return\n",
+    "\n",
+    "batchify()"
    ]
   }
  ],
